--- a/pair.html
+++ b/pair.html
@@ -145,7 +145,7 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">Gifted-Md V5 Pairing I</h3>
+            <h3 class="centered-text">Gifted-Md V5 Pairing</h3>
             <br>
             <h6>🔢 Enter Your Whatsapp Number with Country Code.</h6>
             <div class="input-container">
